--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,9 @@ inputs:
     description: 'Text on contributions graph'
     default: 'JASINERI'
     required: true
+  svg_file_name:
+    description: 'SVG file name (optional), default: graph.svg'
+    default: 'graph.svg'
 runs:
   using: 'node16'
   main: 'dist/index.js'
