--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,11 @@
-name: 'Text on github contribution graph'
+name: 'Gitartwork on github contribution graph'
 inputs:
   github_user_name:
     description: 'GitHub user name'
     default: 'jasineri'
     required: true
   text:
-    description: 'Text on contributions graph'
+    description: 'Text on github contribution graph'
     default: 'JASINERI'
     required: true
   svg_file_name:
